fixed spacing for div container on large screens

--- a/web/week03/shopping-cart/css/styles.css
+++ b/web/week03/shopping-cart/css/styles.css
@@ -81,6 +81,8 @@ button {
     #container {
         flex-flow: row wrap;
         max-width: 1140px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     img {
